# hscopt

./: .clang-tidy  .clangd  CMakeLists.txt  COMMIT_PATTERN.md  README.md  mise.toml
cmake/: Options.cmake
docs/: BUILD.md  CONTRIBUTING.md
examples/: example_rng  rng_example.c
include/hscopt/: alloc.h  brkga.h  decoder.h  defs.h  hho.h  hscopt.h  rng.h  rvns.h
include/hscopt/core/: decoder.hpp  types.hpp
src/: alloc.c  hho.c  rvns.c
